Version 4.1.11
- Made _rxraw more forgiving (but slower) in P1
- No longer align P2 output to 32 bytes (matches newer PNut)
- Fixed various bugs in POSIX file functions

Version 4.1.10
- Added APPEND mode for open
- Added +<= and +>= aliases for +=< and +=> in Spin2
- Allow @"stuff" notation in Spin in place of STRING("stuff")
- Added COGCHK function
- Allowed assembly-only C and BASIC files (similar to Spin with only DAT)
- Implemented ONES, QEXP, and QLOG Spin2 operators
- Fixed a problem with negative numbers in Spin CASE statements
- Fixed bytemove, wordmove, longmove to work with overlapping extents
- Fixed a bogus name conflict with some internal variables like "_dir"
- Made OPTION EXPLICIT apply to FOR loop variables

Version 4.1.9
- Added an error for out of range immediate values in inline asm
- Fixed REG[] dereferencing
- Fixed a problem with passing pointers to pointers to functions
- Fixed a problem with subclasses in system module
- Fixed SIGNX and ZEROX operators to work like Spin2
- Fixed conflict of _clkfreq with CLKFREQ
- Fixed a problem with SEND of simple strings
- Fixed a problem with heap initialization in -O2
- Fixed some issues with register operands in inline assembly
- Implemented mount() and getcwd()
- Implemented OPEN FOR in BASIC
- Implemented "public" and "private" keywords in C++ class declarations (they are currently ignored though).
- Reserved some COG memory in P2 mode

Version 4.1.8
- Added CALL and REG builtins for Spin2
- Fixed a problem with coginit of Spin functions which do not return a value
- Fixed using ADDBITS in bitfield expressions
- Fixed using foo.bar in PASM, and allowed foo#bar to refer to any
  kind of thing `bar` (so foo.bar and foo#bar are identical)
- Fixed a bug in transformation of longmove() to moves, and extended
  this to make many more longmoves() be automatically converted
- Use C++ enum scope for any .c files included as classes in other languages

Version 4.1.7